concord_macros/tests/dsl/fail/fail_rate_limit_empty_block_defaults.rs
use concord_macros::api;

api! {
    client EmptyRateLimitBlockDefaultsApi {
        base "https://example.com"

        defaults {
            rate_limit {}
        }
    }

    GET Ping
        path ["ping"]
        -> concord_core::prelude::Json<String>
}

fn main() {}
